# lamb-rs

./: Cargo.toml  build.rs
src/: buffer.rs  dsp_192k.rs  dsp_48k.rs  dsp_96k.rs  editor.rs  lib.rs  params.rs
