[package]
authors     = ["magnetophon <bart@magnetophon.nl>"]
description = "A lookahead compressor/limiter that's soft as a lamb"
edition     = "2021"
homepage    = "magnetophon.nl"
license     = "AGPL-3.0"
name        = "lamb"
version     = "2.1.1"

[features]
# default       = ["default-boxed", "faust-rebuild"]
default       = ["default-boxed"]
default-boxed = ["dep:default-boxed"]
faust-rebuild = ["dep:faust-build", "dep:faust-ui-build"]

# [workspace]
# members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
  "assert_process_allocs",
  "standalone",
] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
atomic_float   = "0.1"
cyma           = { git = "https://github.com/exa04/cyma.git" }
default-boxed  = { version = "0.2.0", optional = true }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }


faust-traits = { path = "../../../faust-traits" }
faust-types  = { path = "../../../faust-types" }
faust-ui     = { path = "../../../faust-ui" }
# faust-clack = { path = "../../../faust-clack" }
# faust-macro  = { path = "../../../faust-macro" }
strum = { version = "0.27.2", features = ["derive"] }

[profile.release]
lto   = "thin"
strip = "symbols"

[profile.profiling]
debug    = true
inherits = "release"
strip    = "none"

# Generated code - high perf needed anyway
[profile.dev]
opt-level = 3

[build-dependencies]
faust-build    = { path = "../../../faust-build", optional = true }
faust-ui-build = { path = "../../../faust-ui-build", optional = true }
