[package]
authors     = ["magnetophon <bart@magnetophon.nl>"]
description = "A lookahead compressor/limiter that's soft as a lamb"
edition     = "2021"
homepage    = "magnetophon.nl"
license     = "AGPL-3.0"
name        = "lamb"
version     = "2.1.1"

[features]
# default       = ["default-boxed", "faust-rebuild"]
default       = ["default-boxed"]
default-boxed = ["dep:default-boxed"]
faust-rebuild = ["dep:faust-build", "dep:faust-ui-build"]

# [workspace]
# members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
cyma           = { git = "https://github.com/exa04/cyma.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }


faust-traits = { path = "../../../faust-traits" }
faust-types  = { path = "../../../faust-types" }
faust-ui     = { path = "../../../faust-ui" }

default-boxed      = { workspace = true, optional = true }
nih_plug.workspace = true
strum.workspace    = true

# [profile.release]
# lto   = "thin"
# strip = "symbols"

# [profile.profiling]
# debug    = true
# inherits = "release"
# strip    = "none"

# [profile.dev]
# opt-level = 3

[build-dependencies]
faust-build    = { path = "../../../faust-build", optional = true }
faust-ui-build = { path = "../../../faust-ui-build", optional = true }
